<resources>
    <string name="app_name">First project</string>
    <string name="name">Enter your Name</string>
    <string name="ID">ID</string>
    <string name="job">Job</string>
    <string name="phone">Phone</string>
    <string name="password">PW</string>
    <string name="passwordnm">숫자 8자</string>
    <string name="signup">Sign Up</string>
    <string name="YELLOW">YELLOW</string>
    <string name="RANDOM">RANDOM</string>
    <string name="COL">Press Buttons and take look the colors</string>
    <string name="ABOVE">ABOVE</string>
    <string name="right">Right</string>
    <string name="LEFT">LEFT</string>
    <string name="BOTTOM">BOTTOM</string>
    <string name="hint">사라짐</string>
    <string name="avocado">복카도</string>
    <string name="avoInfo">안녕하세요 복카도입니다.</string>
    <string name="talkTime">3:36 PM</string>
    <string name="oneBTN">ONE</string>
    <string name="twoBTN">TWO</string>
    <string name="threeBTN">THREE</string>
    <string name="fourBTN">FOUR</string>
    <string name="fiveBTN">FIVE</string>
    <string name="img">img</string>
    <string name="center">centerBTN</string>
    <string name="bokcado">bokcado</string>
    <string name="nothing">nothing!</string>
    <string name="main">main</string>
    <string name="back">back</string>
</resources>