<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/avocado" />

    <TextView
        android:id="@+id/talkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/imageView"
        android:layout_toRightOf="@id/imageView"
        android:text="@string/avocado"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/talkChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView"
        android:layout_toRightOf="@id/imageView"
        android:text="@string/avoInfo" />

    <TextView
        android:id="@+id/talkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/talkTime" />

</RelativeLayout>